--- a/css/waiting.css
+++ b/css/waiting.css
@@ -5,6 +5,7 @@ div#waiting {
 	margin-left: auto;
 	margin-right: auto;
 }
+
 div#waiting .dot {
 	display:inline-block;
 	width:10px;
@@ -14,14 +15,16 @@ div#waiting .dot {
 	background:#303131;
 	animation: wave 1.3s linear infinite;
 }
+
 div#waiting .dot:nth-child(2) {
 	animation-delay: -1.1s;
 }
+
 div#waiting .dot:nth-child(3) {
 	animation-delay: -0.9s;
 }
 
-@keyframes waiting {
+@keyframes wave {
 	0%, 60%, 100% {
 		transform: initial;
 	}
